<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AbsenActivity"
    android:id="@+id/activity_absen"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextNoAbsn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/noabsn"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextKelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:hint="@string/classes"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextKet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/ket"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/jam"/>

    <RadioGroup
        android:id="@+id/radioSesi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioPagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/morning"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioSiang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/afternoon" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonDaftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simpan"/>

    <Button
        android:id="@+id/buttonLihat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lihat"/>

</LinearLayout>